# eq-prepaid-backend

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yaml  main.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  scripts.md
docs/: RULE_CREATION.md
migrations/: env.py
migrations/versions/: beb56d8e00ed_initial_migration_create_sections_and_.py  c12bb93c2e78_modify_rules_and_section_models.py
src/: __init__.py  app.py  main.py
src/core/: events.py  logger.py  settings.py
src/core/db/: README.md  __init__.py  base.py  config.py  connection.py  lifecycle.py  session.py
src/core/db/mixins/: __init__.py  timestamp_mixin.py  uuid_mixin.py
src/core/db/repository/: README.md  __init__.py  base_mapper.py  base_port.py  base_repository.py  example.py  pagination.py
src/core/domain/: base_entity.py  domain_event.py
src/core/middleware/: correlation_id.py
src/modules/: __init__.py
src/modules/rules/: __init__.py
src/modules/rules/api/: __init__.py  dependencies.py
src/modules/rules/api/controllers/: __init__.py  rule_controller.py  section_controller.py
src/modules/rules/api/errors/: __init__.py  error_responses.py  exception_manager.py
src/modules/rules/api/routes/: __init__.py  rule_routes.py  section_routes.py
src/modules/rules/application/: __init__.py
src/modules/rules/application/dtos/: rule_dtos.py  section_dtos.py
src/modules/rules/application/use_cases/: __init__.py  rule_use_cases.py  section_use_cases.py
src/modules/rules/domain/: __init__.py
src/modules/rules/domain/events/: rule_events.py  section_events.py
src/modules/rules/domain/exceptions/: __init__.py  rule_exceptions.py  section_exceptions.py
src/modules/rules/domain/models/: __init__.py  rule.py  rule_config_examples.py  section.py
src/modules/rules/domain/services/: __init__.py  sql_generator.py
src/modules/rules/domain/value_objects/: enums.py  rule_config.py  slug.py
src/modules/rules/domain/value_objects/rule_config/: common.py  join_clause.py  root.py  select_clause.py  where_clause.py
src/modules/rules/infrastructure/: __init__.py
src/modules/rules/infrastructure/mappers/: __init__.py  rule_mapper.py  section_mapper.py
src/modules/rules/infrastructure/models/: __init__.py  rule_model.py  section_model.py
src/modules/rules/infrastructure/repositories/: __init__.py  rule_repository.py  section_repository.py
tests/: conftest.py  test_rule_endpoints.py  test_section_endpoints.py
tests/rules/: test_join_clause.py  test_root_config.py  test_rule_config.py  test_rule_entity.py  test_section_entity.py  test_select_clause.py  test_sql_generator.py  test_where_clause.py
