[project]
name = "eq-prepaid-backend"
version = "0.1.0"
description = "Equation Prepaid Backend"
authors = [
    {name = "Al Moustapha",email = "doumbiaalmoustapha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "eq_prepaid_backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.12.11"
bandit = "^1.8.6"
pylint = "^3.3.8"
poetry-plugin-export = "^1.9.0"
isort = "^6.0.1"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "BLE001",
    "COM812",
    "ISC001",
    "D100",
    "D101",  # Missing docstring in public class
    "D104",
    "D105",
    "D107",
    "D205",
    "D211",
    "D212",
    "D400",  # First line should end with a period
    "D415",  # First line should end with a period, question mark, or exclamation point
    "E203",
    "E266",
    "ANN101",
    "ANN102",
    "ANN201",  # Missing return type annotation for public function
    "ANN204",
    "S101",   # Use of assert detected
    "S602",
    "ERA001",
    "PLR0913",
    "PLR2004", # Magic value used in comparison
    "N803",
    "N815",
    "EM101",  # Exception must not use a string literal
    "TRY003", # Avoid specifying long messages outside the exception class
    "INP001", # File is part of an implicit namespace package
]
target-version = "py310"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "D400", "D415", "SLF001", "PLR2004", "FBT001", "FBT002", "D401", "E501", "S608", "INP001"]

[tool.bandit]
exclude_dirs = [
    ".venv",
    ".git",
    "tests",
    "__pycache__",
]
skips = ["B101"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
