[project]
name = "eq-prepaid-backend"
version = "0.1.0"
description = "Equation Prepaid Backend"
authors = [
    {name = "Al Moustapha",email = "doumbiaalmoustapha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
dev = "main:app"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.12.11"
bandit = "^1.8.6"
pylint = "^3.3.8"
poetry-plugin-export = "^1.9.0"
isort = "^6.0.1"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "BLE001", "COM812", "ISC001", "D100", "D101", "D104", "D105", "D107",
    "D205", "D211", "D212", "D400", "D415", "E203", "E266", "ANN201",
    "ANN204", "S101", "S602", "ERA001", "PLR0913", "PLR2004", "N803",
    "N815", "EM101", "TRY003", "INP001", "RUF100", "RUF013", "D102",
    "D106", "D200", "D203", "D401", "E501", "ANN001", "ANN101", "ANN102",
    "ANN206", "ANN401", "S104", "PGH003", "PLC0415", "TRY004", "TRY400",
    "EM102", "F401", "F821", "DTZ005", "SIM102", "PERF401"
]
target-version = "py310"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "D400", "D415", "SLF001", "PLR2004", "FBT001", "FBT002", "D401", "E501", "S608", "INP001"]
"*/models/*.py" = ["RUF012"]
"migrations/*.py" = ["ALL"]


[tool.bandit]
exclude_dirs = [".venv", ".git", "tests", "__pycache__", "migrations"]
skips = ["B101"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
combine_as_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
